--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.2",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
